# FSIV

./: common_code.hpp  metrics.cpp  test_image.cpp
Practice 1/: CMakeLists.txt  README.txt  common_code.cpp  common_code.hpp  foregh.cpp
Practice 2/: CMakeLists.txt  common_code.cpp  common_code.hpp  pixgui.cpp
Practice 3/: CMakeLists.txt  lab3.cpp  unsharp.cpp
Practice 4/: CMakeLists.txt  basiccam.cpp  common_code.cpp  common_code.hpp
Practice 5/: CMakeLists.txt  camcalib.cpp  common_code.cpp  common_code.hpp  imageList.txt  imageLists.txt
Practice 6/: CMakeLists.txt  Doubts.txt  seglib.cpp  seglib.hpp  vsegbase.cpp
Practice 6/videos/: video2.avi
Practice 7/: CMakeLists.txt  Doubts.txt
Practice 7/src/: common_code.cpp  metrics.cpp  metrics.hpp  test_image.cpp  train_val.cpp
Theory/: CMakeLists.txt  RobertFilter.cpp  convolution.cpp  ejercicio1409-1.cpp  ejercicio1409-2.cpp  ejercicio1909-1.cpp  extraprg.cpp  gauss.cpp  medianFilter.cpp  prg1.cpp  prg2.cpp  prg3.cpp  prg4.cpp  prg5.cpp
Theory/CannyEdgeValentinAvram/: CMakeLists.txt  cannyEdge.cpp
histopat_moodle/: CMakeLists.txt  README.md  common_code.cpp  metrics.cpp  test_image.cpp  train_val.cpp
